# haskellbook

./: .gitignore
ch27/: hbch27.cabal
ch27/src/: CoreDump.hs  Sharing.hs  StrictList.hs
ch28basiclibs/: ch28basiclibs.cabal
ch28basiclibs/app/: Main.hs
ch28basiclibs/src/: MapTest.hs  MutableVectorTest.hs  SeqTest.hs  SetTest.hs  Texts.hs  VectorTest.hs  VectorsEx.hs
ch28dlist/: ch28dlist.cabal
ch28dlist/app/: Main.hs
ch28dlist/src/: Lib.hs  Queue.hs
ch28profiling/: hbch28.cabal
ch28profiling/src/: decorator.py  listBenchmark.hs  profilingCafs.hs  profilingTime.hs
fingerd/: fingerd.cabal
fingerd/src/: Debug.hs
hbch27/: hbch27.cabal
hbch27/src/: CoreDump.hs
hbch28/: hbch28.cabal
hbch28/app/: Main.hs
hbch28/src/: profilingCafs.hs  profilingHeap.hs
